[package]
name = "grpc-rust-mtls"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"
tonic-health = {version = "0.9.2"}

[build-dependencies]
tonic-build = "0.9.2"
