[package]
name = "grpc-rust-mtls"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[dependencies]
prost = "0.11.9"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tonic = {version  = "0.9.2",  features = ["tls"]}
tonic-health = {version = "0.9.2"}

[build-dependencies]
tonic-build = "0.9.2"
